--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -77,7 +77,7 @@
 
         <h2>Contact Us</h2>
         <p>If you have any questions about this privacy policy or our practices, please contact us at:</p>
-        <p>Email: [Your Email Address]</p>
+        <p>Email: [mirzaabdulrehman321@gmail.com]</p>
 
         <p class="last-updated">This privacy policy may be updated from time to time. Please check back regularly for any changes.</p>
     </div>
